# URSULA

./: CMakeLists.txt  package.xml
config/: controller_teleop.yaml  nav2_params.yaml  ps4_teleop.yaml  serial_bridge_params.yaml  slam_toolbox_params.yaml  steering_dynamics_notes.yaml  twist_mux.yaml
launch/: camera.launch.py  detection.launch.py  dev_hardware_launch.launch.py  gazebo_sim_full.launch.py  gazebo_sim_launch.launch.py  jetson_hardware_launch.launch.py  jetson_oldlaunch.launch.py  nav2_launch.launch.py  rtabmap_oakd.launch.py  sim_full_test_launch.launch.py  sim_teleop_launch.launch.py  slam_launch.launch.py
networking/: fastdds_super_client.xml
rviz/: ursula.rviz
scripts/: detection_mapper.py  detection_visualiser.py  mock_detector.py  serial_command_bridge.py  ursula_manager.py
urdf/: gazebo_plugins.xacro  ursula.urdf.xacro
ursula/: detection_visualiser.py
worlds/: ursula_maze.world  ursula_open_lab.world
